# pythonfullstack

./: Python_Fullstack.code-workspace
financial-app/backend/: .gitignore  books.json  books.py  dev.bat  dev.sh  pyproject.toml  requirements.txt  run_dev.py
